@@ -90,6 +90,7 @@ DEFAULT_CONFIGURATION: Dict[str, Optional[Union[str, bool, int]]] = {
     "use_pure": False,
     "krb_service_principal": None,
     "oci_config_file": None,
+    "oci_config_profile": None,
     "fido_callback": None,
     "kerberos_auth_mode": None,
     "init_command": None,
