@@ -12,6 +12,7 @@ v8.0.33
 =======
 
 - WL#15528: Add docker build/test support for existing server
+- WL#15483: Support OCI ephemeral key-based authentication
 - WL#15435: Improve the logging system
 - WL#15401: Support for type hints in module mysqlx
 - BUG#31355895: Fix slow executemany() with insert statements
